--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "eslint-plugin-boundaries": "^5.0.1",
     "eslint-plugin-import": "^2.32.0",
     "react": "^19.1.0",
+    "react-content-loader": "^7.0.2",
     "react-dom": "^19.1.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.2",
